# Sentiment-Project

./: LICENSE  README.md  REPOSITORY_SETUP.md  main.py  pyproject.toml  requirments.txt
Sentiment_Analysis/: .env  Sentiment_bot.html  Sentiment_bot.ipynb  sentiment_analysis_results.txt
