[project]
name = "sentiment-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.29.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-google-vertexai>=2.0.28",
    "langchain-groq>=0.3.7",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.4",
    "langsmith>=0.4.14",
    "python-dotenv>=1.1.1",
    "typing-extensions>=4.14.1",
]
